--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,8 @@ services:
   redis:
     image: redis:alpine 
     container_name: redis
+    ports:
+    - "6379:6379"
     networks: 
       - redis-network
 
