--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,6 @@ networks:
   mongodb-ex-network:
   redis-network:
 
-
 services:
   api:
     image: doconnor/movies-api:1.0
@@ -33,12 +32,14 @@ services:
       - mongodb-ex-network
     volumes:
       - moviedata:/data/db
+      - ./seeding.json:/docker-entrypoint-initdb.d/seeding.json
+    command: mongod --bind_ip_all --auth; mongoimport --host database --db tmdb_movies --authenticationDatabase admin --username admin --password secret --drop --jsonArray --file /docker-entrypoint-initdb.d/seeding.json
 
   redis:
     image: redis:alpine 
     container_name: redis
     ports:
-    - "6379:6379"
+      - "6379:6379"
     networks: 
       - redis-network
 
@@ -60,4 +61,3 @@ services:
 
 volumes:
   moviedata:
-
