--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,9 @@ services:
       - MONGODB_URI=mongodb://admin:secret@database:27017
       - REDIS_URI=redis://redis
       - ENABLE_WRITING_HANDLERS=false
+    profiles:
+      - dev
+      - prod
     networks:
       - redis-network
       - mongodb-network
@@ -34,6 +37,9 @@ services:
       - moviedata:/data/db
       - ./seeding.json:/docker-entrypoint-initdb.d/seeding.json
     command: mongod --bind_ip_all --auth; mongoimport --host database --db tmdb_movies --authenticationDatabase admin --username admin --password secret --drop --jsonArray --file /docker-entrypoint-initdb.d/seeding.json
+    profiles:
+      - dev
+      - prod
 
   redis:
     image: redis:alpine 
@@ -42,6 +48,9 @@ services:
       - "6379:6379"
     networks: 
       - redis-network
+    profiles:
+      - dev
+      - prod
 
   mongo-express:
     container_name: express
@@ -53,6 +62,9 @@ services:
       - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
       - ME_CONFIG_MONGODB_ADMINPASSWORD=secret
       - ME_CONFIG_MONGODB_SERVER=database
+    profiles:
+      - dev
+      - prod
     networks: 
       - redis-network
       - mongodb-ex-network
